# birbs-adventures

./: Cargo.toml  README.md
src/: birb.rs  main.rs  physics.rs  util.rs
