[package]
name = "one-more-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.0", features = ["dynamic"] }
leafwing-input-manager = "0.7.0"
rand = "0.8.5"
bevy_rapier2d = {version = "0.19.0", features = [ "debug-render" ]}

[profile.dev.package."*"]
opt-level = 3